--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="password">Password</string>
     <string name="username">Username</string>
 
-
+    <string name="tab_client">Client</string>
+    <string name="tab_volunteer">Volunteer</string>
 </resources>
