--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="password">Password</string>
     <string name="username">Username</string>
     <string name="pass_error_length">Password must be at least 6 characters long</string>
+    <string name="reg_error_duplicate">Username already exists</string>
+    <string name="auth_error">Username or password are incorrect</string>
 
     <string name="tab_client">Client</string>
     <string name="tab_volunteer">Volunteer</string>
