- added crop feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="error_connection">No internet connection</string>
     <string name="error_server">Could not connect to server, please try again later</string>
     <string name="error_timeout">Connection timeout</string>
+    <string name="error_crop">Your device doesn\'t support the crop action</string>
+    <string name="error_image">Error loading image</string>
 
     <string name="tab_client">Client</string>
     <string name="tab_volunteer">Volunteer</string>
